--- a/问卷调查/Views/Shared/_MobileLayout.cshtml
+++ b/问卷调查/Views/Shared/_MobileLayout.cshtml
@@ -9,12 +9,14 @@
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         <link href="~/css/all.css" rel="stylesheet" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css" rel="stylesheet" type="text/css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css" rel="stylesheet" type="text/css">
     </environment>
 
     <style>
@@ -24,25 +26,25 @@
             color: white;
         }
 
-        p {
+        #content p {
             word-break: break-all;
             font-size: 18px;
             margin-top: 10px;
             margin-bottom: 5px;
         }
 
-        div {
+        #content div {
             font-size: 16px;
             margin-top: 5px;
             margin-bottom: 5px;
         }
 
-        input {
+        #content input {
             border: 0;
             border-bottom: 1px solid;
         }
 
-            input[type="checkbox"]:not(:first-child) {
+            #content input[type="checkbox"]:not(:first-child) {
                 margin-left: 10px;
             }
 
@@ -69,6 +71,7 @@
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/vue/dist/vue.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/js/bootstrap-dialog.min.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
@@ -85,6 +88,7 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/js/bootstrap-dialog.min.js"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
