--- a/问卷调查/Views/Home/Index.cshtml
+++ b/问卷调查/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="">
         <div class="col-sm-2 sidebar">
             <ul class="nav nav-sidebar">
-                @foreach (Template t in Model)
+                @foreach (Template t in Model.OrderBy(x => x.PrintOrder))
                 {
                     <li><a href="#" data-tid="@t.Id">@t.Name</a></li>
                 }
@@ -16,7 +16,7 @@
         <div class="col-sm-10 col-sm-offset-2 main">
             <input type="hidden" id="hd_mainId" />
             @Html.Partial("~/Views/Home/BarHead.cshtml")
-            <div id="container" class="container" style="margin-top:60px">
+            <div id="container" class="container" style="margin-top: 60px;width:960px">
 
             </div>
             <div class="col-sm-12" id="Paginator"> <ul id="pageLimit"></ul> </div>
@@ -75,10 +75,57 @@
             //绑定radio
             $("#container input:checkbox").click(function () {
                 var sum = 0;
-                $.each($("#container input:checkbox:checked"),
-                    function () {
-                        sum += Number($(this).val());
-                    });
+
+                if ($('span.tdsum').length > 0) {
+                    var trcheckednum = 0;
+                    var tr = $(this).closest('tr');
+
+                    trcheckednum = tr.find('input:checkbox:checked').length;
+                    //连续减7特殊计算
+                    if ($(this).attr('desc').indexOf('连续减7') > -1) {
+                        switch (trcheckednum) {
+                            case 5:
+                                trcheckednum = 3;
+                                break;
+                            case 4:
+                                trcheckednum = 3;
+                                break;
+                            case 3:
+                                trcheckednum = 1;
+                                break;
+                            case 2:
+                                trcheckednum = 1;
+                                break;
+                            case 1:
+                                trcheckednum = 0;
+                                break;
+                        }
+                    }
+
+                    if ($(this).attr('id') == 'checkbox_5_1' || $(this).attr('id') == 'checkbox_5_2') {
+                        if ($('#checkbox_5_1').is(':checked') && $('#checkbox_5_2').is(':checked')) {
+                            trcheckednum = 2
+                        } else if ($('#checkbox_5_1').is(':checked') || $('#checkbox_5_2').is(':checked')) {
+                            trcheckednum = 1;
+                        } else {
+                            trcheckednum = 0;
+                        }
+
+                        if ($(this).attr('id') == 'checkbox_5_2')
+                            tr = tr.prev();
+                    }
+                    tr.find('span.tdsum').html(trcheckednum);
+                    $.each($('span.tdsum'),
+                        function () {
+                            sum += Number($(this).html());
+                        })
+                } else {
+                    $.each($("#container input:checkbox:checked"),
+                        function () {
+                            //该行选中的个数
+                            sum += $(this).val() == '' ? 1 : Number($(this).val());
+                        });
+                }
 
                 $('#container .calcsum').text(sum);
                 dataResult = sum;
@@ -89,8 +136,98 @@
             if (visitID == '') {
                 popshow();
                 return false;
-            } else
-                return true;
+            }
+
+            return true;
+        }
+
+        function CheckNeedPZB() {
+            //匹兹堡睡眠必填
+            var flag = true;
+            var r = /^\+?[1-9][0-9]*$/; //正整数
+            //1-4必填
+            if ($('#text_1_1').val() == '') {
+                alert('请填写序号1内容');
+                return false;
+            }
+            if ($('#text_1_2').val() == '') {
+                alert('请填写序号2内容');
+                return false;
+            } else if (!r.test($('#text_1_2').val())) {
+                alert('序号2内容必须为非负整数');
+                return false;
+            }
+            if ($('#text_1_3').val() == '') {
+                alert('请填写序号3内容');
+                return false;
+            }
+            if ($('#text_1_4').val() == '') {
+                alert('请填写序号4内容');
+                return false;
+            }
+            if ($('#text_1_5').val() == '') {
+                alert('请填写序号4内容');
+                return false;
+            }
+
+            //对勾
+            $.each($('span[isuniq=true]'),
+                function () {
+                    var itemdesc = $(this).attr("desc");
+                    var itemgroup = $(this).attr("group");
+
+                    if ($(this).find('input[type="checkbox"]:checked').length > 0) {
+                        return true;
+                    } else {
+                        flag = false;
+                        alert('请选择：' + (itemgroup == '' ? '' : itemgroup + '-') + itemdesc);
+                        return false;
+                    }
+                })
+
+            return flag;
+        }
+
+        function CheckNeedSF36() {
+            var flag = true;
+            //对勾
+            $.each($('span[isuniq=true]'),
+                function () {
+                    var itemdesc = $(this).attr("desc");
+                    var itemgroup = $(this).attr("group");
+                    var itemparent = $(this).attr("parent");
+
+                    if ($('input[type="checkbox"][id^="checkbox_' + itemparent + '_"]:checked').length > 0) {
+                        return true;
+                    } else {
+                        flag = false;
+                        alert('请选择：' + (itemgroup == '' ? '' : itemgroup + '-') + itemdesc);
+                        return false;
+                    }
+                })
+
+            return flag;
+        }
+
+        function CheckNeedJYZL() {
+            var flag = true;
+            //对勾
+            $.each($('span[isuniq=true],p[isuniq=true]'),
+                function () {
+                    var itemdesc = $(this).attr("desc");
+                    var itemgroup = $(this).attr("group");
+                    var itemparent = $(this).attr("parent");
+
+                    if ($('input[type="checkbox"][id^="checkbox_' + itemparent + '_"]:checked').length > 0) {
+                        return true;
+                    } else {
+                        flag = false;
+                        alert('请选择：' + (itemgroup == '' ? '' : itemgroup + '-') + itemdesc);
+                        return false;
+                    }
+                })
+
+            return flag;
         }
 
         function InitPage() {
@@ -174,11 +311,52 @@
                         function () {
                             //绑定checkbox、redio
                             var obj = $('#' + this.dataSign);
-
-                            if (obj.prop("type") === 'text') {
-                                obj.val(this.itemValue);
-                            } else {
+                            if (obj.attr("id").indexOf('checkbox') > -1) {
                                 obj.prop('checked', this.attribution);
+
+                                if ($('span.tdsum').length > 0) {
+                                    var trcheckednum = 0;
+                                    var tr = obj.closest('tr');
+
+                                    trcheckednum = tr.find('input:checkbox:checked').length;
+                                    //连续减7特殊计算
+                                    if (obj.attr('desc').indexOf('连续减7') > -1) {
+                                        switch (trcheckednum) {
+                                            case 5:
+                                                trcheckednum = 3;
+                                                break;
+                                            case 4:
+                                                trcheckednum = 3;
+                                                break;
+                                            case 3:
+                                                trcheckednum = 1;
+                                                break;
+                                            case 2:
+                                                trcheckednum = 1;
+                                                break;
+                                            case 1:
+                                                trcheckednum = 0;
+                                                break;
+                                        }
+                                    }
+
+                                    if (obj.attr('id') == 'checkbox_5_1' || obj.attr('id') == 'checkbox_5_2') {
+                                        if ($('#checkbox_5_1').is(':checked') && $('#checkbox_5_2').is(':checked')) {
+                                            trcheckednum = 2
+                                        } else if ($('#checkbox_5_1').is(':checked') || $('#checkbox_5_2').is(':checked')) {
+                                            trcheckednum = 1;
+                                        } else {
+                                            trcheckednum = 0;
+                                        }
+
+                                        if (obj.attr('id') == 'checkbox_5_2')
+                                            tr = tr.prev();
+                                    }
+                                    tr.find('span.tdsum').html(trcheckednum);
+                                }
+
+                            } else {
+                                obj.val(this.itemValue);
                             }
                             //绑定text
                         });
@@ -194,7 +372,10 @@
 
         function save() {
             var tableData = [];
-            if (!Check()) return;
+            var tid = $('#left_menu li.active a').data('tid');
+            if (tid == 7 && !CheckNeedPZB()) return;
+            if (tid == 11 && !CheckNeedSF36()) return;
+            if (tid == 9 && !CheckNeedJYZL()) return;
             /*---------绑定数据---------
             $.each($('input[name="leipiNewField"][type=text]'),
                 function (i, e) {
@@ -214,14 +395,14 @@
                     var pDesc = $(this).attr('desc');
                     var pGroup = $(this).attr('group');
 
-                    var items = $('#container input[id*=_' + pIndex + '_]');
+                    var items = $('#container [id*=_' + pIndex + '_]');
 
                     $.each(items,
                         function () {
                             var type = $(this).attr('type');
                             var item = $(this);
                             var itemid = item.attr('id');
-                            var itemAttribution = type === 'text' ? '' : $(this).prop('checked')?'checked':'';
+                            var itemAttribution = type === 'text' ? '' : $(this).prop('checked') ? 'checked' : '';
                             var itemDesc = item.attr('desc');
                             var itemValue = item.val();
                             tableData.push({
@@ -248,6 +429,7 @@
                 },
                 function (data) {
                     $('#container').html(data);
+                    $('#hd_mainId').val('');
                     $('button.btn-show').removeClass('btn-show').addClass('hidden');
                     $('#Paginator').show();
                 });
